
2013-11-30 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix ProcessCount and ThreadCount when greater than 1.0 so that it
      uses ceil (previously it was sometimes ceil+1)
    * Add done return value for cloudi_service_map_reduce
      cloudi_service_map_reduce_send/2 so that having more workers than
      work does not cause extra processing

2013-11-29 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix timer usage within internal services, during the
      cloudi_service_init/3 function execution

2013-11-28 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add backward-cpp integration alongside booster/backtrace.h for
      providing the execution backtrace from the C++ CloudI API
    * Make CloudI::API::backtrace() functionality require enabling
      with configure (--with-cxx-backtrace)
    * No longer catch non-std::exception types within the C/C++ CloudI API
      (now the service will terminate with abort() after outputting a
       backtrace, if possible)
    * Add boost::exception integration to provide more information after the
      abnormal termination of a C++ CloudI API service request

2013-11-27 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add booster/backtrace.h usage to the C/C++ CloudI API

2013-11-21 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add recv_asyncs to the cloudi_service module and the cloudi module
      for internal services, but not to external services due to the
      memory allocation burden it would create for external services
    * Fix a few small differences between the cloudi module and the
      cloudi_service module with recv_async timeout handling of undefined

2013-11-20 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix a small difference between the cloudi module and
      the cloudi_service module with how PatternPid can be undefined
    * Add the functions destination_refresh_immediate/1 and
      destination_refresh_lazy/1 to the modules cloudi and cloudi_service